[project]
name = "notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipywidgets>=8.1.7",
    "kagglehub>=0.3.12",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
